deployments/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        runAsUser: 2013 # Maps to the "grafana" user on the nas
        runAsGroup: 2013
      containers:
      - image: grafana/grafana-oss
        name: grafana
        ports:
          - containerPort: 3000
        volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-volume
      volumes:
        - name: grafana-volume
          persistentVolumeClaim:
            claimName: grafana-pv-claim
