deployments/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: grafana
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
